<resources>
    <string name="app_name">iInfo</string>
    <string name="university">University</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">Restaurant</string>
    <string name="travel">Travels</string>
    <string name="bank">Banks</string>
    <string name="splash">Welcome</string>
    <string name="du">University of Dhaka</string>
    <string name="dmc">Dhaka Medical College and Hospital</string>
    <string name="buet">Bangladesh University of Engineering and Technology</string>
    <string name="nsu">North South University</string>
    <string name="aiub">American International University-Bangladesh</string>
    <string name="aust">Ahsanullah University of Science and Technology</string>
    <string name="ewu">East West University</string>
    <string name="brack">BRAC University</string>
    <string name="uap">University of Asia Pacific</string>
    <string name="daffodil">Daffodil International University</string>
    <string name="iub">Independent University, Bangladesh</string>
    <string name="ulab">University of Liberal Arts Bangladesh</string>
    <string name="square">Square Hospital</string>
    <string name="ibn_sina">Ibn Sina Hospital</string>
    <string name="city_hospital">City Hospital</string>
    <string name="labaid">Labaid Specialized Hospital</string>
    <string name="popular">Popular Medical College Hospital</string>
    <string name="appollo">Apollo Hospitals Dhaka</string>
    <string name="bar_b_q">Bar B Q Tonite</string>
    <string name="sabroso">Sabroso</string>
    <string name="nandos">Nandos Dhanmondi</string>
    <string name="takeout">Takeout Dhanmondi</string>
    <string name="handi">Handi</string>
    <string name="more_info">For more information......</string>
    <string name="hospital_website">Website  :</string>
    <string name="facebook">Facebook : </string>
    <string name="du_details1">The University of Dhaka (Bengali: ঢাকা বিশ্ববিদ্যালয় and also known as
        Dhaka University or simply DU) is the oldest university in modern Bangladesh. The university is ranked number
        one on the Bangladesh University Ranking 2017. Established in 1921 during the British Raj, it has made
        significant contributions to the modern history of Bangladesh. After the Partition of India, it
        became the focal point of progressive and democratic movements in Pakistan. Its students and teachers played
        a central role in the rise of Bengali nationalism and the independence of Bangladesh.</string>
    <string name="du_details2">The university distinguished alumni include Fazlur Rahman Khan (pioneer of modern structural
        engineering), Muhammad Yunus (winner of the 2006 Nobel Peace Prize, pioneer of Microcredit), Muhammad Shahidullah
        (famous educator, philologist, and linguist), Natyaguru Nurul Momen (the pioneer trailblazer of progressive
        culture, theatre, literature, performing arts, philosophy and arts; who was both an early student and a teacher
        as well, of Dhaka University), Serajul Islam Choudhury (the country's leading public intellectual and writer),
        Rehman Sobhan (social democratic economist), Mohammad Ataul Karim (physicist), Abul Fateh
        (one of the founding fathers of South Asian diplomacy), Buddhadeb Bose (20th-century Bengali poet),
        and Sheikh Mujibur Rahman (the founding father of Bangladesh).
        It also enjoyed associations with Satyendra Nath Bose, Vijayaraghavan, and Kazi Nazrul Islam.</string>
    <string name="du_details3">Today, it is the largest public university in Bangladesh, with a student body of 33,000
        and a faculty of 1,800.It was identified by AsiaWeek as one of the top 100 universities in Asia. However,
        since the 1990s,the university has suffered from intensely politicized, partisan, and violent campus politics
        promoted by Bangladesh's political parties</string>
    <string name="dmc_details1">The college original building was built before the Partition of Bengal of 1905; being used,
        as of 1904, as the secretariat (headquarters) of the newly formed provinces of East Bengal and Assam; then,
        in 1921, turned over to the University of Dhaka, which was founded that year. At that time a part of the huge
        building was used as the university medical center, another part as the students' dormitory and the rest
        as the office of the administrative wing of the Arts faculty.

        In 1939, the Dhaka university council requested that the British Government establish a separate medical college
        in Dhaka. The proposal was postponed because of the onset of the Second World War.</string>
    <string name="dmc_details2">During World War II the medical center building became an American armed forces hospital.
        The Americans vacated the building at the end of the war.

        Finally, Dhaka Medical College was established in 1946, and the college began admitting students.
        Academic classes started on 10 July which is celebrated as "DMC DAY". The 1st year, beginning class, or "Batch",
        was named K-5, 2nd year K-4, 3rd year K-3, 4th year K-2, and 5th year K-1. All the advanced students
        (K-4 through K-1) had transferred from the Calcutta Medical College, in large part because of the partition of
        India</string>
    <string name="dmc_details3">At first there were no female students, but now about half of the students are females.</string>
    <string name="buet_details1">Bangladesh University of Engineering and Technology (Bengali: বাংলাদেশ প্রকৌশল বিশ্ববিদ্যালয়়),
        commonly known as BUET (pronounced [bue̯eʈ]; Bengali: বুয়েট), is a public university in Bangladesh, which focuses
        on the study of engineering and architecture. Founded in 1912, it is the oldest institution for the study of
        engineering, architecture and urban planning inBangladesh.</string>
    <string name="buet_details2">Every year, around 1055 students get accepted to their undergraduate programs to study
        engineering, architecture, and urban planning. Of the 10,000 candidates selected to write the undergraduate
        admission test from an initial application pool of over 10,000 applicants, only about the top 10% are admitted.
        Around 1000 graduate students are accepted into their Masters and PhD programmes on an annual basis.
        The total number of teachers is around 600. With the construction of new academic buildings, an auditorium complex,
        and halls of residence, the university has continued to expand over the last three decades. BUET has been ranked
        135th among the Asian universities in the 2018 edition of QS World University Rankings.</string>
    <string name="buet_details3">Dacca Survey School was established in 1876 as a survey school at Nalgola,
        west of the current Sir Salimullah Medical College campus, in Old Dhaka by the then Government of
        Bengal under British Raj.[5] It offered a survey course of two years to train land surveyors, at the end
        of which students competed at the Sub-Overseer examination. According to a report on public instruction in Bengal,
        on 31 March 1903, Dacca Survey School had 117 students of which 103 were Hindus and 14 were Muslims. In 1908,
        the school started to offer diploma degrees. Khwaja Ahsanullah, a philanthropist and member of the
        Dhaka Nawab Family, endowed donations for developing the survey school. After his death in 1901, his son,
        the then Nawab of Dhaka, Khwaja Salimullah released 112,000 rupees grant in 1902 in accordance.
        As an acknowledgement of this contribution, the school was renamed to Ahsanullah School of Engineering.</string>
    <string name="nsu_details1">North South University (Bengali: নর্থ সাউথ বিশ্ববিদ্যালয়, also known as NSU) is the first
        non-government university in Bangladesh. Its Business School is also the first in Bangladesh to receive
        American accreditation from ACBSP.</string>
    <string name="nsu_details2">The government of Bangladesh approved the establishment of North South University in 1992
        under the Private University Act (PUA) 1992 (now replaced by PUA 2010). The university was formally inaugurated
        on 10 February 1993, by Prime Minister Khaleda Zia.</string>
    <string name="nsu_details3">The university ranked 1st among the private universities and 12th among all the
        universities in research output on the Bangladesh University Ranking 2017</string>
    <string name="aiub_details1">American International University-Bangladesh (Bengali: আমেরিকান ইন্টারন্যাশনাল ইউনিভার্সিটি-বাংলাদেশ),
        commonly known as AIUB is an accredited and renowned private university located at Kuratoli Road, Kuril in Dhaka,
        Bangladesh. The university is an independent organization with own Board of Trustees. It offers several degree
        programs at graduate and undergraduate level from four faculties, particularly in the field of engineering and
        business studies.</string>
    <string name="aiub_details2">The university was established in 1994 as AMA International University Bangladesh,
        a joint venture between AMA Computer University of the Philippines, and local sponsor Anwarul Abedin.
        Regular academic classes started in 1995. AMA Computer University later left the partnership, and in 2001
        the university was renamed American International University-Bangladesh..</string>
    <string name="aiub_details3">The University is located at Kuratoli Road, Khilkhet, Dhaka. The campus area is about
        30 acres (12 ha). A total building area of 1,300,000 square feet (120,000 m2) is being utilized for academic
        programs both undergraduate and graduate. The construction of main academic building is under-process.
        Currently, AIUB operates it's all academic activities in 7 annex buildings. The library will be shifted to the
        iconic round-shaped building very soon.</string>
    <string name="aust_details1">Ahsanullah University of Science and Technology (Bengali: আহ্ছানউল্লা বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়)
        or commonly known as AUST is the first non-government engineering university to be established in Bangladesh.
        The University is considered as one of the finest engineering universities and the leading non-government
        engineering university in Bangladesh, which was founded by the Dhaka Ahsania Mission in 1995.
        Dhaka Ahsania Mission is a non-profit voluntary organization in Bangladesh. The Mission was established in 1958
        by Khan Bahadur Ahsanullah.</string>
    <string name="aust_details2">The permanent Campus of the University has been built on 5-bighas (1.6 acres) of land
        at Tejgaon Industrial Area which is located in the heart of Dhaka City. The land use in this area is quickly
        changing from an industrial area to a commercial area. The 10-storied building including 2-level basement has a
        total floor area of more than 4 lac sq.ft.</string>
    <string name="aust_details3">Continuous power and water supply is ensured by its own two generators, each of 1000 KVA,
        2500 KVA sub-station and 4-inch Dia. deep tube-well. The campus also provides facilities for co-curricular
        activities like common rooms (male and female), indoor game rooms, etc. as well as space for car parking and heavy
        machinery labs in the basements.</string>
    <string name="ewu_details1">East West University (Bengali: ইস্ট ওয়েস্ট বিশ্ববিদ্যালয়, also known as EWU),
        is a private university located in Aftabnagar, Dhaka of Bangladesh</string>
</resources>