<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/floralwhite"
    tools:context=".Hospital_List">


    <ScrollView
        android:id="@+id/hospitalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/squareView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/oldlace">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/square_logo"
                    android:background="@color/oldlace"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/square"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/navyblue"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ibnSinaView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/oldlace"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ibn_sina_logo"
                    android:background="@color/oldlace"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/ibn_sina"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/navyblue"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/cityView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/oldlace"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/city_hospital_logo"
                    android:background="@color/oldlace"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/city_hospital"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/navyblue"
                    />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/labaidView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/oldlace"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/labaid_logo"
                    android:background="@color/oldlace"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/labaid"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/navyblue"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/appolloView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/oldlace"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/appollo_logo"
                    android:background="@color/oldlace"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/appollo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/navyblue"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/popularView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/oldlace"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/popular_logo"
                    android:background="@color/oldlace"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/popular"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/navyblue"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>